files/css/styles.css
/* ... */
/*
 * Re-set default cursor for disabled elements
 */

button[disabled],
input[disabled] {
	cursor: default;
}

/*
 * Consistent box sizing and appearance
 */

input[type="checkbox"],
input[type="radio"] {
	box-sizing: border-box;
	padding: 0;
	*width: 13px;
	*height: 13px;
}
input[type="search"] {
	-webkit-appearance: textfield;
	-moz-box-sizing: content-box;
	-webkit-box-sizing: content-box;
	box-sizing: content-box;
}
input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button {
	-webkit-appearance: none;
}

/*
 * Remove inner padding and border in FF3/4
 */

button::-moz-focus-inner,
input::-moz-focus-inner {
	border: 0;
	padding: 0;
}

/*
 * 1. Remove default vertical scrollbar in IE6/7/8/9
 * 2. Allow only vertical resizing
 */

textarea {
	overflow: auto;
	vertical-align: top;
	resize: vertical;
}

/* Colors for form validity */

input:invalid,
textarea:invalid {
	background-color: #f0dddd;
}

/* =============================================================================
   Tables
   ========================================================================== */

table {
	border-collapse: collapse;
	display: block;
	padding-top: 40px;
	padding-bottom: 40px;
}
tr {
	padding: 0;
	margin: 0;
}
td {
	vertical-align: top;
	padding-right: 60px;
	line-height: 1.4;
}

/* =============================================================================
   Chrome Frame Prompt
   ========================================================================== */

.chromeframe {
	margin: 0.2em 0;
	background: #ccc;
	color: black;
	padding: 0.2em 0;
}

/* ==|== primary styles =====================================================
   Author: Dan Newman
   ========================================================================== */

/* CUSTOM STYLES */

.container {
	padding: 30px 60px 40px 60px;
	max-width: 1680px;
	margin: auto;
}

.container p {
	margin: 0 0 20px 0;
}

p {
	color: #000000;
}

nav ul li {
	display: inline;
	font-size: 18px;
}

nav a {
	text-decoration: none;
	opacity: 0.8;
}

nav a:hover {
	opacity: 0.4;
	text-decoration: none;
}

.URL {
	text-transform: uppercase;
	font-weight: 700;
	margin-right: 15%;
}

.anchor {
	float: right;
	margin-left: 12%;
}

.home header {
	max-width: 1040px;
	padding-top: 100px;
}

.work header {
	max-width: 1040px;
	padding-top: 100px;
}

.arrow a {
	text-decoration: none;
	font-size: 24px;
}

.arrow a:hover {
	opacity: 0.4;
}

h1 {
	font-weight: 700;
	font-size: 48px;
	line-height: 56px;
	padding: 20px 0 20px 0;
	margin: 0;
}

.home h1,
.home h2 {
	font-weight: 700;
	font-size: 48px;
	line-height: 56px;
	padding-bottom: 40px;
	color: #000000;
}

.home h1 a,
.home h2 a {
	text-decoration: underline;
}

.home h1 a:hover,
.home h2 a:hover {
	opacity: 0.4;
	text-decoration: underline;
}

h2 {
	font-weight: 400;
	font-size: 32px;
	line-height: 40px;
	padding: 0 0 10px 0;
	margin: 0;
}

h3 {
	font-weight: bold;
	font-size: 42px;
	line-height: 52px;
	padding: 20px 0 20px 0;
	margin: 0;
}

h4,
h5 {
	font-weight: bold;
	font-size: 10px;
	line-height: 18px;
	padding: 20px 0 0 0;
	margin: 0;
	text-transform: uppercase;
}

h4 {
	opacity: 0.4;
}

section {
	max-width: 640px;
}

section ul,
footer ul {
	list-style: none;
	padding: 0;
	margin: 0 0 20px 0;
}

.images {
	max-width: 1680px;
	padding: 80px 0 140px 0;
}

a.image:hover {
	opacity: 0.8;
}

.row {
	display: flex;
}

.column-100 {
	flex: 100%;
	padding-right: 15px;
	padding-bottom: 45px;
}

.column-60 {
	flex: 60%;
	max-width: 1040px;
	padding-right: 15px;
}

.column-40 {
	flex: 40%;
	max-width: 615px;
	padding-right: 15px;
}

p.caption {
	padding: 10px 40px 0 0;
	line-height: 1.4;
}

p.intro {
	font-size: 28px;
	line-height: 36px;
	padding-bottom: 10px;
}

p.break {
	padding-top: 20px;
}

blockquote {
	border-left: 1px solid #dddddd;
	padding: 0 20px 0 20px;
	margin: 0;
}

hr {
	margin: 40px 0 20px 0;
	border-top: 1px solid #dddddd;
}

.opacity {
	opacity: 0.4;
}

.hover {
	text-decoration: none;
}

.uppercase {
	text-transform: uppercase;
}

.quote {
	padding-top: 8px;
	display: inline-block;
}

.desktop {
	display: inline;
}

footer {
	padding: 60px 0 0 0;
}

/* ==|== media queries ======================================================
   EXAMPLE Media Query for Responsive Design.
   This example overrides the primary ('mobile first') styles
   Modify as content requires.
   ========================================================================== */
@media only screen and (max-width: 1680px) {
	.home header,
	.work header {
		max-width: 920px;
	}
	.home h1,
	.home h2 {
		font-size: 40px;
		line-height: 48px;
		padding-bottom: 40px;
	}
	.images {
		max-width: 1540px;
		padding-top: 60px;
		padding-bottom: 60px;
	}
	.column-60 {
		flex: 65%;
	}
	.column-40 {
		flex: 35%;
	}
}
@media only screen and (max-width: 1380px) {
	.anchor {
		float: right;
		margin-left: 8%;
	}
	.desktop {
		display: none;
	}
}
/* ... */

